--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,29 @@
-backports.functools-lru-cache==1.5
-certifi==2019.3.9
-cffi==1.12.2
-cycler==0.10.0
-kiwisolver==1.0.1
-matplotlib==2.2.4
-mkl-fft==1.0.10
-mkl-random==1.0.2
-numpy==1.16.2
-olefile==0.46
-Pillow==5.4.1
-pycparser==2.19
-pyparsing==2.3.1
-python-dateutil==2.8.0
-pytz==2018.9
-six==1.12.0
-subprocess32==3.5.3
-torch==1.0.1.post2
-torchvision==0.2.2
+torch==2.0.0+cu118
+torchvision==0.15.1
+numpy==1.23.5
+matplotlib==3.7.1
+
+# contourpy-1.3.0
+# cycler-0.12.1 
+# fonttools-4.60.1 
+# importlib-resources-6.5.2 
+# joblib-1.5.2 
+# kiwisolver-1.4.7 
+# matplotlib-3.7.1 
+# numpy-1.23.5 
+# pandas-2.3.3 
+# pillow-11.3.0 
+# pyparsing-3.2.5 
+# pytz-2025.2 
+# scikit-learn-1.2.2 
+# scipy-1.13.1 
+# seaborn-0.12.2 
+# threadpoolctl-3.6.0 
+# tzdata-2025.2
+
+# certifi-2025.11.12 
+# charset_normalizer-3.4.4 
+# idna-3.11 
+# requests-2.32.5 
+# torchvision-0.15.1 
+# urllib3-2.5.0
